--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@mui/icons-material": "^5.6.1",
         "@mui/material": "^5.1.0",
         "@mui/x-data-grid": "^5.5.1",
+        "leaflet": "^1.8.0",
         "luxon": "^2.3.2",
         "mobx": "^6.3.5",
         "mobx-react": "^7.2.1",
@@ -35,6 +36,7 @@
         "react": "^18.0.0",
         "react-big-calendar": "^0.40.1",
         "react-dom": "^18.0.0",
+        "react-leaflet": "^4.0.0",
         "react-router-dom": "^6.2.1",
         "reflect-metadata": "^0.1.13",
         "sass": "^1.43.2",
@@ -57,6 +59,7 @@
         "@nrwl/workspace": "14.0.5",
         "@nxext/vite": "^13.2.5",
         "@types/jest": "27.4.1",
+        "@types/leaflet": "^1.7.11",
         "@types/luxon": "^2.0.5",
         "@types/mysql": "^2.15.21",
         "@types/node": "16.11.7",
